# pizza-clock

./: .gitignore  .gitmodules  README.md  pizza-clock.code-workspace
.github/workflows/: deploy.yaml
case/: .gitignore  Makefile  README.md  board_holder.stl  pizza_stand.stl  pizza_stand_lid.stl  pyproject.toml
case/src/: build.py
pizza_generator/: .gitignore  README.md  circular_things.json  pyproject.toml
pizza_generator/src/circular_prompt_gen/: cli.py
pizza_generator/src/pizza_gen/: ade20k.py  circular_gen.py  cli.py  logger.py  pizza_gen.py
rpi_image/: README.md  configuration.nix  flake.nix  home.nix  localConfig.example.nix
webui/: .gitignore  .prettierrc  README.md  astro.config.mjs  eslint.config.mjs  package-lock.json  package.json  tailwind.config.mjs
webui/public/assets/: .gitignore
webui/src/components/: App.tsx  PizzaClock.tsx  SettingSidebar.tsx
webui/src/components/ui/: dialog.tsx  sheet.tsx  sidebar.tsx
webui/src/lib/: astro.ts  gitInfo.ts
webui/src/lib/hooks/: useSharedState.ts  useTemporalPeriodicCallback.ts
webui/src/lib/theme/: circularTheme.ts  pizzaTheme.ts
webui/src/pages/: index.astro
webui/src/pages/theme/: circular.json.ts  pizza_12p.json.ts
webui/src/styles/: global.css
