[project]
name = "pizza-clock-case"
version = "0.1.0"
description = "pizza-clock/case"
readme = "README.md"
authors = [
    { name = "likeablob", email = "46628917+likeablob@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "solidpython2>=2.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["I"]
